--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 ##  ˝æ›‘¥≈‰÷√
-spring.datasource.url=jdbc:mysql://192.168.100.35:3306/qa_test?characterEncoding=UTF-8
-spring.datasource.username=lishuai
-spring.datasource.password=lishuai
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ## Mybatis ≈‰÷√
 mybatis.typeAliasesPackage=com.example.lsmock.bean
 mybatis.mapperLocations=classpath:mapper/*.xml
