--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.56</version>
 		</dependency>
+		<!--token相关依赖-->
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.8.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
