--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,17 @@
 			<version>1.18.12</version>
 			<scope>provided</scope>
 		</dependency>
+		<!--ssh相关依赖-->
+		<dependency>
+			<groupId>ch.ethz.ganymed</groupId>
+			<artifactId>ganymed-ssh2</artifactId>
+			<version>262</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+		</dependency>
 
 	</dependencies>
 	<build>
