--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,19 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?characterEncoding=UTF-8&s
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+## 数据库配置
+linux.host=10.170.222.64
+linux.username=
+linux.password=
 ## Mybatis 配置
 mybatis.typeAliasesPackage=com.example.lsmock.bean
 mybatis.mapperLocations=classpath:mapper/*.xml
+##咚咚配置
+dog.token.url=http://dog-ee.jd.com/grant
+dog.token.aspid=
+dog.token.secret=
+dog.token.version=4.3
+dog.token.curcode=230031
+dog.send.url=http://dog-ee.jd.com/push
 ###修改指定端口
 server.port=8011
