--- a/pom.xml
+++ b/pom.xml
@@ -87,12 +87,7 @@
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 		</dependency>
-		<!--咚咚相关依赖-->
-		<dependency>
-			<groupId>com.jd.dd</groupId>
-			<artifactId>dd-open-gw-api</artifactId>
-			<version>4.1.0-SNAPSHOT</version>
-		</dependency>
+		<!--咚咚与jsf相关依赖-->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpcore</artifactId>
@@ -103,6 +98,16 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.5.6</version>
 		</dependency>
+		<dependency>
+			<groupId>com.jd.dd</groupId>
+			<artifactId>dd-open-gw-api</artifactId>
+			<version>4.1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.jd</groupId>
+			<artifactId>jsf</artifactId>
+			<version>1.6.9</version>
+		</dependency>
 
 	</dependencies>
 	<build>
@@ -110,6 +115,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<fork>true</fork>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
