去除调jsf相关代码，保留spring-jsf

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,19 @@
 ##  ˝æ›‘¥≈‰÷√
 spring.datasource.url=jdbc:mysql://11.51.194.89:3358/test?characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=salt
+spring.datasource.password=saltstack
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ##  ˝æ›ø‚≈‰÷√
 linux.host=10.170.222.64
-linux.username=
-linux.password=
+linux.username=admin
+linux.password=AdminTest2!_+
 ## Mybatis ≈‰÷√
 mybatis.typeAliasesPackage=com.example.lsmock.bean
 mybatis.mapperLocations=classpath:mapper/*.xml
 ##ﬂÀﬂÀ≈‰÷√
 dog.token.url=http://dog-ee.jd.com/grant
-dog.token.aspid=
-dog.token.secret=
+dog.token.aspid=110.200.0000002.281
+dog.token.secret=27448da743392d5c5525cea69f40a7f2
 dog.token.version=4.3
 dog.token.curcode=230031
 dog.send.url=http://dog-ee.jd.com/push
