--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ linux.password=
 mybatis.typeAliasesPackage=com.example.lsmock.bean
 mybatis.mapperLocations=classpath:mapper/*.xml
 ##ﬂÀﬂÀ≈‰÷√
-dog.token.url=http://dog-ee.jd.com/grant
+dog.token.url=1
 dog.token.aspid=
 dog.token.secret=
 dog.token.version=4.3
