--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /target/
 !.mvn/wrapper/maven-wrapper.jar
+application.properties
 
 ### STS ###
 .apt_generated
@@ -15,7 +16,6 @@
 *.iws
 *.iml
 *.ipr
-*.properties
 
 ### NetBeans ###
 /nbproject/private/
