--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,21 @@
 ## 数据源配置
-spring.datasource.url=jdbc:mysql://11.51.194.89:3358/test?characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=salt
-spring.datasource.password=saltstack
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ## 数据库配置
 linux.host=10.170.222.64
-linux.username=admin
-linux.password=AdminTest2!_+
+linux.username=
+linux.password=
 ## Mybatis 配置
 mybatis.typeAliasesPackage=com.example.lsmock.bean
 mybatis.mapperLocations=classpath:mapper/*.xml
 ##咚咚配置
-dog.token.url=http://dog-ee.jd.com/grant
-dog.token.aspid=110.200.0000002.281
-dog.token.secret=27448da743392d5c5525cea69f40a7f2
-dog.token.version=4.3
-dog.token.curcode=230031
-dog.send.url=http://dog-ee.jd.com/push
+dog.token.url=
+dog.token.aspid=
+dog.token.secret=
+dog.token.version=
+dog.token.curcode=
+dog.send.url=
 ###修改指定端口
 server.port=8011
