--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 ## 数据源配置
-spring.datasource.url=jdbc:mysql://11.51.194.89:3358/test?characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-## 数据库配置
+## 服务器配置
 linux.host=10.170.222.64
 linux.username=
 linux.password=
