--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,12 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ## 服务器配置
 linux.host=10.170.222.64
-linux.username=admin
-linux.password=AdminTest2!_+
+linux.username=
+linux.password=
 ## Mybatis 配置
 mybatis.typeAliasesPackage=com.example.lsmock.bean
 mybatis.mapperLocations=classpath:mapper/*.xml
+##开启swagger
+swagger.enable=true
 ###修改指定端口
 server.port=8011
