--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,17 @@
 			<artifactId>spring-jdbc</artifactId>
 			<version>5.2.11.RELEASE</version>
 		</dependency>
-
+		<!--swagger依赖-->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.8.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.8.0</version>
+		</dependency>
 
 	</dependencies>
 	<build>
