--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,11 @@ mybatis.typeAliasesPackage=com.example.lsmock.bean
 mybatis.mapperLocations=classpath:mapper/*.xml
 ##开启swagger
 swagger.enable=true
+##开启logback日志文件的大小达到10MB时，会切分一次
+logging.file=log/lsmock.log
+##控制台显示日志的格式
+logging.pattern.console=%d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n
+##文件显示日志的格式
+logging.pattern.file=%d{yyyy/MM/dd-HH:mm} [%thread] %-5level %logger- %msg%n
 ###修改指定端口
 server.port=8011
